[AV2-228] button overlapping fixed.

--- a/src/app/settings/settings.component.scss
+++ b/src/app/settings/settings.component.scss
@@ -3,12 +3,26 @@
   right: 10px;
 }
 .contact-grid {
-  margin-left: 0px;
+  margin: 0px;
+  width: 100%;
+  padding: 0px;
+  .contact-label{
+    padding-bottom: 0px;
+  }
+  ion-row{
+    &.text-field{
+      ion-col {
+        padding-top: 0px;
+        text-align: center;
+        &.button-col {
+          padding: 0px;
+        }
+      }
+    }
+  }
 }
 .contact-input {
   background-color: var(--practera-input-number-color);
   margin-top: 8px;
-}
-.update-btn {
-  margin-top: 25px;
+  width: 100%;
 }
